Add unit tests for usecases